Added List Up Marketlace to list of projects

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="projects2">
                 <a class="projects2child" href="https://genrp24.github.io/Horiseon-Refactor/" target="_blank"><img class="smallpic" src="./assets/images/Horiseon.png" alt="Horiseon Refactor"></a>
                 <a class="projects2child" href="https://genrp24.github.io/Two-APIs-One-Cup-Group-Project/" target="_blank"><img class="smallpic" src="./assets/images/twoapisonesun.png" alt="Two APIs One Sun"></a>
-                <a class="projects2child"><img class="smallpic" src="./assets/images/imageplaceholder.png" alt="Placeholder"></a>
+                <a class="projects2child" href="https://listup-marketplace.herokuapp.com/" target="_blank"><img class="smallpic" src="./assets/images/List Up.jpg" alt="List Up Marketplace"></a>
                 <a class="projects2child"><img class="smallpic" src="./assets/images/imageplaceholder.png" alt="Placeholder"></a>
             </div>
         </div>
